# llm_playground

./: README.md  brochure_run.py  pyproject.toml  website_lab.ipynb
brochure_outputs/: Boskalis.md  Hugging_Face.md
src/: website.py
src/llm_playground/: __init__.py  brochure.py  mcp.py  message_formatter.py  website.py  website_summarizer.py
